<resources>
    <string name="app_name">SkogenCoin</string>

    <!-- Welcome screen -->
    <string name="hello">Hei!</string>
    <string name="welcomeTvBedrift"><u>Bedrift</u></string>
    <string name="login">Logg Inn</string>
    <string name="welcomeBtnRegister">Registrer Deg</string>
    <!-- /Welcome screen -->

    <!-- Username screen -->
    <string name="usernameTv">La oss bli bedre kjent!</string>
    <string name="userNameTvName">Fornavn</string>
    <string name="userNameTvSurname">Etternavn</string>
    <string name="usernameTvConfirm">Ser det greit ut?</string>
    <!-- /Username screen -->

    <!-- Extra info screen -->
    <string name="extraInfoTvPhone">Telefon Nummer (Obligatorisk)</string>
    <string name="extraInfoTvEmail">E-Mail (Valgfritt)</string>
    <string name="extraInfoTvPin">Personlig 4-Sifret Kode</string>
    <!-- /Extra info screen -->

    <string name="loginPinTvNext">Gå Videre</string>
    <string name="loginPhoneTvPhone">Telefon Nummer</string>

    <!-- Add payment & Scan Card & Card Info screens -->
    <string name="addPaymentTvLater"><u>Legg til senere</u></string>
    <string name="addPaymentTv">Ønsker du å legge til en betalingsmetode?</string>
    <string name="addCard">Legg til kort</string>
    <string name="scanCardTvDontManually">Du trenger ikke skrive inn kortet manuelt!</string>
    <string name="scanCardTvSure">Vil du fortsatt være ekstra sikker?</string>
    <string name="cardInfoTvCardNumber">Kortnummer</string>
    <string name="cardInfoTvExpDate">Utløpsdato</string>
    <string name="cardInfoTvCVC">CVC</string>
    <string name="cardInfoTvCardHolder">Navn På Innehaver</string>
    <string name="cardInfoTvRight">Ser riktig ut!</string>
    <!-- /Add payment & Scan Card screens -->

    <!-- Home screen -->
    <string name="homeTvTodaysOffers">Dagens Tilbud</string>
    <string name="homeTvScanQr">Scan QR Kode</string>
    <string name="homeTvScanQrDesc">Gjør det enda enkere å få tak i menyer!</string>
    <string name="homeTvMyMenus">Mine Menyer</string>
    <string name="homeTvMyMenusDesc">Her kan du finne en liste over alle menyene du har scannet</string>
    <string name="homeTvSearchDesc">Søk på dine favoritt restauranter og få opp menyen deres slik at du kan vite akkurat hva du vil ha når du kommer dit!</string>
    <!-- /Home screen -->

    <!-- Profile Screen -->
    <string name="profileTvPhone">Telefon Nummer</string>
    <string name="profileTvEmail">E-Mail</string>
    <string name="profileTvWelcome">Velkommen til din nye profil!</string>
    <!-- /Profile Screen -->

    <!-- Meal Info Screen -->
    <string name="mealInfoTvSizes">Størrelser</string>
    <string name="mealInfoTvTypes">Typer</string>
    <string name="mealInfoTvPriceDefault">-- Kr</string>
    <string name="mealInfoTvPricePlaceHolder">%1$d Kr</string>
    <!-- /Meal Info Screen -->

    <!-- Errors -->
    <string name="error_invalid_phone">Ugyldig telefonnummer</string>
    <string name="error_invalid_email">Ugyldig epostadresse</string>
    <string name="error_pin_incorrect">Feil pin</string>
    <string name="error_card_credentials">Ugyldig kortinformasjon</string>

    <string name="errorApiNoInternet">Kontroller nettverkstilkobling</string>
    <string name="errorApi500_503">Beklager, tjenesten er midlertidig utilgjengelig. Prøv igjen senere.</string>
    <string name="errorBadToken">Du må være logget inn for denne operasjonen</string>
    <string name="error404">Ingen resultater funnet for din forespørsel.</string>
    <!-- /Errors -->

    <!-- General -->
    <string name="loading">Laster&#8230;</string>
    <string name="home">Hjem</string>
    <string name="search">Søk</string>
    <string name="my_profile">Min Profil</string>
    <string name="settings">Innstillinger</string>
    <string name="scan">Scan</string>
    <string name="price_placeholder">%1$dKr</string>
    <string name="name_placeholder">%1$s %2$s</string>
    <string name="logout">Logg ut</string>
    <string name="mealInfoTvNumber">Antall</string>
    <string name="tvContinue">Fortsett</string>
    <!-- /General -->
</resources>
