<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/home"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_my_profile"
        android:title="@string/my_profile"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_scan_qr"
        android:enabled="true"
        android:icon="@drawable/ic_scan_qr"
        android:title="@string/scan"
        app:showAsAction="ifRoom|withText" />
</menu>