<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="@dimen/margin_primary_2X">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileCivAvatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_marginTop="@dimen/margin_primary_2X"
        android:elevation="4dp"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="1dp"
        app:civ_circle_background_color="@color/colorAvatarBg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_plus_accent" />

    <TextView
        android:id="@+id/profileTvName"
        style="@style/TextViewStyle"
        android:layout_marginTop="@dimen/margin_primary_3X"
        android:textSize="@dimen/text_size_xl_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileCivAvatar"
        tools:text="Ola Nordmann" />

    <TextView
        android:id="@+id/profileTvPhone"
        style="@style/TextViewStyle"
        android:layout_marginTop="@dimen/margin_primary_4X"
        android:text="@string/profileTvPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileTvName" />

    <TextView
        android:id="@+id/profileTvPhoneValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_primary"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileTvPhone"
        tools:text="23123" />

    <TextView
        android:id="@+id/profileTvEmail"
        style="@style/TextViewStyle"
        android:layout_marginTop="@dimen/margin_primary_2X"
        android:text="@string/profileTvEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileTvPhoneValue" />

    <TextView
        android:id="@+id/profileTvEmailValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_primary"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileTvEmail"
        tools:text="Nordmann@gmail.com" />

    <TextView
        style="@style/TextViewStyle"
        android:layout_marginBottom="@dimen/margin_primary_2X"
        android:gravity="center"
        android:text="@string/profileTvWelcome"
        android:textSize="@dimen/text_size_x2_large"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/profileTvLogout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/profileTvLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:padding="@dimen/margin_primary"
        android:text="@string/logout"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>